--- a/package.json
+++ b/package.json
@@ -40,5 +40,10 @@
   },
   "devDependencies": {
     "standard": "^14.3.4"
+  },
+  "standard": {
+    "globals": [
+      "FormData"
+    ]
   }
 }
