--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "clsx": "^1.1.1",
     "framer-motion": "^2.6.13",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
